# Multi-variateKalmanFilter

./: .gitignore  CMakeLists.txt  CMakePresets.json  KalmanFilter.cpp  KalmanFilter.h  README.md  Utilities.h  main.cpp  simulation_results.csv  visualize_metrics.py
.github/workflows/: ci.yml
tests/: test_kalman.cpp
